Repaired Grouping Algorithm